[refactor] fix overflow of keywords and titles

--- a/app/components/com_publications/site/assets/css/browse.css
+++ b/app/components/com_publications/site/assets/css/browse.css
@@ -25,7 +25,6 @@ section.section {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   grid-template-rows: auto;
-  height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   width: 100%;
@@ -49,7 +48,6 @@ section.section {
   flex-wrap: nowrap;
   background-color: #fff;
   justify-content: flex-end;
-  position: -webkit-sticky;
   position: sticky;
   right: 1.25em;
   top: 3.5rem;
@@ -181,8 +179,10 @@ input#search[type=text] {
   background-color: transparent;
   border: none;
   color: #2b2b2b;
+  display: flex;
   font-style: "open_sansregular", Helvetica Neue, Helvetica, sans-serif;
   line-height: inherit;
+  text-align: left;
 }
 .accord-trigger:hover {
   background-color: transparent;
@@ -190,7 +190,8 @@ input#search[type=text] {
 }
 
 .hz-icon {
-  margin-left: auto;
+  align-self: center;
+  margin-left: 0.5em;
 }
 
 .facet-count {
@@ -250,6 +251,7 @@ input#search[type=text] {
 }
 .coursesource-card h5 {
   margin-top: 0.4em;
+  word-break: break-word;
 }
 
 .coursesource-card-img {
@@ -273,6 +275,7 @@ input#search[type=text] {
 .coursesource-card-contents .author {
   font-size: 0.9rem;
   border-right: 1px solid #c1c1c1;
+  display: inline-block;
   padding: 0 0.5em;
 }
 .coursesource-card-contents .keyword:first-of-type,
@@ -360,14 +363,14 @@ p.warning {
 }
 @media only screen and (min-width: 69.75em) {
   .pagination,
-p.warning {
+  p.warning {
     grid-column: 1/span 2;
     grid-row: auto;
   }
 }
 @media only screen and (min-width: 92.875em) {
   .pagination,
-p.warning {
+  p.warning {
     grid-column: 1/span 3;
     grid-row: auto;
   }
